# Clash_of_Solana

./: .gitignore  LICENSE  clash_solana_ai_backend_tz.md
Clash/: project.godot
clash-of-solana-backend/: .env.example  Anchor.toml  Cargo.toml  DEPLOY_GUIDE.md  GAME_MECHANICS_REPORT.md  README.md  package-lock.json  package.json  tsconfig.json
clash-of-solana-backend/backend/: package.json
clash-of-solana-backend/backend/src/: config.ts  redis.ts  server.ts  solana.ts
clash-of-solana-backend/backend/src/db/: index.ts  schema.sql
clash-of-solana-backend/backend/src/jobs/: leaderboard.ts
clash-of-solana-backend/backend/src/routes/: auth.ts  battle.ts  game.ts  leaderboard.ts  player.ts  shop.ts
clash-of-solana-backend/backend/src/services/: battle-validator.ts  crypto.ts  game-state.ts  matchmaking-redis.ts  matchmaking.ts  solana-state.ts
clash-of-solana-backend/programs/components/battle_state/: Cargo.toml
clash-of-solana-backend/programs/components/battle_state/src/: lib.rs
clash-of-solana-backend/programs/components/building_data/: Cargo.toml
clash-of-solana-backend/programs/components/building_data/src/: lib.rs
clash-of-solana-backend/programs/components/resources/: Cargo.toml
clash-of-solana-backend/programs/components/resources/src/: lib.rs
clash-of-solana-backend/programs/components/troop_stats/: Cargo.toml
clash-of-solana-backend/programs/components/troop_stats/src/: lib.rs
clash-of-solana-backend/programs/components/village_info/: Cargo.toml
clash-of-solana-backend/programs/components/village_info/src/: lib.rs
clash-of-solana-backend/programs/systems/battle_action/: Cargo.toml
clash-of-solana-backend/programs/systems/battle_action/src/: lib.rs
clash-of-solana-backend/programs/systems/battle_settle/: Cargo.toml
clash-of-solana-backend/programs/systems/battle_settle/src/: lib.rs
clash-of-solana-backend/programs/systems/battle_start/: Cargo.toml
clash-of-solana-backend/programs/systems/battle_start/src/: lib.rs
clash-of-solana-backend/programs/systems/build_construct/: Cargo.toml
clash-of-solana-backend/programs/systems/build_construct/src/: lib.rs
clash-of-solana-backend/programs/systems/build_upgrade/: Cargo.toml
clash-of-solana-backend/programs/systems/resource_collect/: Cargo.toml
clash-of-solana-backend/programs/systems/shield_manage/: Cargo.toml
clash-of-solana-backend/programs/systems/troop_train/: Cargo.toml
clash-of-solana-backend/programs/systems/village_init/: Cargo.toml
clash-of-solana-backend/scripts/: deploy.sh
clash-of-solana-backend/tests/: battle.test.ts  building.test.ts  resource.test.ts  troop.test.ts  village.test.ts
(+13 files in other folders)
