[package]
name = "battle-settle"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
battle-state = { path = "../../components/battle_state" }
village-info = { path = "../../components/village_info" }
resources = { path = "../../components/resources" }

[lib]
crate-type = ["cdylib", "lib"]
