[package]
name = "build-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
village-info = { path = "../../components/village_info" }
building-data = { path = "../../components/building_data" }
resources = { path = "../../components/resources" }

[lib]
crate-type = ["cdylib", "lib"]
