[package]
name = "troop-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
village-info = { path = "../../components/village_info" }
troop-stats = { path = "../../components/troop_stats" }
resources = { path = "../../components/resources" }

[lib]
crate-type = ["cdylib", "lib"]
